# deltagen-rust

./: .gitignore  Cargo.toml
implementations/go/: go.mod
implementations/go/cmd/deltagen/: main.go
implementations/go/internal/deltagen/: apply.go  cross_validation_rust_to_go_test.go  cross_validation_test.go  delta.go  delta_test.go  snapshot.go  util.go
implementations/rust/: Cargo.toml
implementations/rust/src/: apply.rs  lib.rs  snapshot.rs  util.rs
src/: delta.rs  main.rs
tests/: basic.rs  extra_cases.rs
